--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "phaser": "^3.80.1",
+    "@google/generative-ai": "^0.21.0",
+    "axios": "^1.7.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
